Fix ControlBarSession button input overflow on mobile

--- a/src/styles/_workspace.scss
+++ b/src/styles/_workspace.scss
@@ -1070,7 +1070,7 @@ $code-color-error: #ff4444;
     padding: 0.4rem 0.8rem 0.4rem 0.8rem;
 
     input {
-      width: 25rem;
+      width: 15rem;
       margin-right: 0.58em;
       &:focus {
         outline: none;
